fixed spacing

--- a/styles/Burger.module.css
+++ b/styles/Burger.module.css
@@ -17,7 +17,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100vw;
-  padding: 10rem 5rem 7rem 5rem;
+  padding: 1rem 3rem;
   height: 10vh;
 }
 .container .links {
