--- a/styles/Main.module.scss
+++ b/styles/Main.module.scss
@@ -3,7 +3,7 @@
   padding: 1rem 12rem 2rem 12rem;
 
   @include small-screen {
-    padding: 1rem 7rem 1rem 7rem;
+    padding: 1rem 5rem 1rem 5rem;
     margin-top: 5rem;
     scroll-margin-top: 25rem;
   }
