--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -8,7 +8,7 @@
   padding: 2rem 10rem 2rem 6rem;
 
   @include small-screen {
-    padding: 10rem 5rem 7rem 5rem;
+    padding: 1rem 3rem;
     position: sticky;
     z-index: 500;
     top: 0;
