--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -5,7 +5,7 @@
   width: 100%;
   padding: 0 12rem 0 12rem;
   @include small-screen {
-    padding: 0 5rem 0 5rem;
+    padding: 0 3rem 0 3rem;
     scroll-margin-top: 25rem;
   }
 
